svc1.yml
apiVersion: v1
kind: Service
metadata:
    name: ngin-svc 
spec:
    type: NodePort
    selector:
        app: nginx
    ports:
    - targetPort: 80
      port: 80
      nodePort: 32761
